<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--General-->
    <string name="app_name">DashClock Twitch</string>
    <string name="extension_description">Displays information about Twitch.tv live streams that you follow.</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="settings_title">DashClock Twitch Settings</string>
    <string name="pref_ringtone_silent">Silent</string>

    <!--Extension-->
    <plurals name="extension_expanded_title">
        <item quantity="one">%d Live Channel</item>
        <item quantity="other">%d Live Channels</item>
    </plurals>

    <!--Main Dialog-->
    <string name="dialog_main_update">Update</string>
    <string name="main_list_item_game">Game</string>
    <string name="main_list_item_status">Status</string>
    <string name="main_list_item_viewers">Viewers</string>
    <string name="main_list_item_followers">Followers</string>
    <string name="main_list_item_updated">Updated</string>
    <string name="main_list_empty_offline">no channels offline</string>
    <string name="main_list_empty_online">no channels online</string>
    <string name="action_update">Update</string>
    <string name="action_show_offline">Show Offline</string>

    <!--Main List Customization-->
    <string name="pref_main_list_item_customization_title">Customize Displayed Information</string>
    <string name="pref_main_list_item_customization_summary">Choose which information to display or hide</string>
    <string name="pref_main_list_item_customization_dialog_title">Customize Display</string>

    <!--Preference Categories-->
    <string name="pref_category_customization">Customization</string>
    <string name="pref_category_support">Support</string>
    <string name="pref_category_dialog">Main Dialog</string>
    <string name="pref_category_general">General</string>

    <!--Hide-->
    <string name="pref_hide_empty_title">Hide Empty Extension</string>
    <string name="pref_hide_empty_summary">Hide extension if no channels are online</string>

    <!--Game Database-->
    <string name="pref_game_db_update_title">Update Game Database</string>
    <plurals name="pref_game_db_update_summary">
        <item quantity="one">%d game in database</item>
        <item quantity="other">%d games in database</item>
    </plurals>
    <string name="pref_char_limiter_preview">Preview</string>

    <!--Abbreviation Dialog-->
    <string name="pref_abbr_title">Set Game Title Abbreviations</string>
    <string name="dialog_abbr_title">Abbreviations</string>
    <string name="dialog_abbr_delete">Delete</string>
    <string name="dialog_abbr_add">Add</string>
    <string name="dialog_abbr_add_title">Add Abbreviation</string>
    <string name="dialog_abbr_add_hint_game">Game</string>
    <string name="dialog_abbr_add_hint_game_missing">Insert Game</string>
    <string name="dialog_abbr_add_hint_abbr">Abbreviation</string>
    <string name="dialog_abbr_add_hint_abbr_missing">Insert Abbreviation</string>
    <plurals name="pref_abbr_summary">
        <item quantity="one">%d custom abbreviation</item>
        <item quantity="other">%d custom abbreviations</item>
    </plurals>

    <!--Preferences-->
    <string name="pref_user_name_title">Set User Name</string>
    <string name="pref_char_limit_title">Expanded Body Item Character Limit</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet tortor et urna dictum pharetra a sit amet purus. In tempus dictum eros. Proin congue cursus ipsum eu faucibus. Curabitur nullam.</string>


    <!--Custom Selection-->
    <string name="pref_custom_visibility_title">Custom Visibility</string>
    <string name="pref_custom_visibility_summary">Enable custom channel selection</string>
    <string name="pref_following_selection_title">Select Custom Channels</string>
    <string name="pref_following_selection_progress_title">Fetching data...</string>
    <string name="pref_following_selection_progress_fail">Could not fetch data.</string>
    <plurals name="pref_following_selection_summary">
        <item quantity="one">%1$d out of %2$d channel selected</item>
        <item quantity="other">%1$d out of %2$d channels selected</item>
    </plurals>

    <!--Interval-->
    <string name="pref_update_interval_title">Set Update Interval</string>
    <plurals name="pref_update_interval_summary">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="dialog_update_interval_title">Pick an interval</string>
    <string name="dialog_interval_minutes">minutes</string>

    <!--UserVoice-->
    <string name="pref_user_voice_title">UserVoice</string>
    <string name="pref_user_voice_summary">Get help or leave feedback</string>
    <string name="pref_user_voice_help_center">Help Center</string>
    <string name="pref_user_voice_feedback_forum">Feedback Forum</string>
    <string name="pref_user_voice_contact_form">Contact Form</string>
    <string name="pref_user_voice_post_idea_form">Post Idea Form</string>

    <!--Donate-->
    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_summary">Support further development</string>

    <!--About-->
    <string name="pref_about_title">About</string>
    <string name="pref_about_body" translatable="false">
        <![CDATA[
        Copyright © 2014, Johannes Hoffmann<br>
        All rights reserved.<br>

        Source Code available on GitHub.]]>
    </string>

</resources>
