<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainDialogActivity">
    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"/>

    <item
        android:id="@+id/action_show_offline"
        android:title="@string/action_show_offline"
        android:checkable="true"
        android:showAsAction="never"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never"
        android:orderInCategory="100"/>
</menu>