<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">

    <TextView android:id="@+id/main_list_item_display_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_list_item_display_name_text">

        <!--Game-->
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_list_item_game"
                android:paddingEnd="6dp"
                android:text="@string/main_list_item_game"/>

            <TextView android:id="@+id/main_list_item_game_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <!--Status-->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_list_item_status"
                android:paddingEnd="6dp"
                android:text="@string/main_list_item_status"/>

            <TextView android:id="@+id/main_list_status_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <!--Viewers-->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_list_item_viewers"
                android:paddingEnd="6dp"
                android:text="@string/main_list_item_viewers"/>

            <TextView android:id="@+id/main_list_viewers_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <!--Updated At-->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_list_item_updated_at"
                android:paddingEnd="6dp"
                android:text="@string/main_list_item_updated_at"/>

            <TextView android:id="@+id/main_list_updated_at_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
